--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
   },
   "devDependencies": {
     "react-scripts": "^1.1.4"
-  }
+  },
+  "homepage": "http:akashishu777.github.io/react_with_semantic_ui"
 }
